# pyomo-poc

./: Dockerfile  app.py  pyproject.toml
